Minor changes to style, for better visibility, and to line chart, in an attempt to solve the logarithmic chart problem.

--- a/src/app/notatarget/notatarget.component.css
+++ b/src/app/notatarget/notatarget.component.css
@@ -9,7 +9,7 @@ div.welcome {
 }
 
 div.scene {
-  background-color: cornflowerblue;
+  /*background-color: cornflowerblue;*/
   width: 100%;
   height: 80%;
 }
